# Ravl2

./: .clang-format  .gitignore  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md
examples/: CMakeLists.txt  benchmarkAccess.cc  exAffine.cc  exAssert.cc  exConnectedComponents.cc  exCorner.cc  exMediaContainer.cc  exRandomSearchOptimise.cc  exSegmentation.cc  extrema.cc  intro.cc
examples/SimplePlayer/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  ReadMe.md  VideoPlayer.cpp  VideoPlayer.h  main.cpp
src/: CMakeLists.txt
src/Ravl2/: Angle.cc  Angle.hh  Array.cc  Array.hh  Array1.cc  Array1.hh  ArrayAccess.hh  ArrayIterZip.cc  ArrayIterZip.hh  Assert.hh  Base64.cc  Base64.hh  Buffer.cc  Buffer.hh  CMakeLists.txt  CallbackArray.cc  CallbackArray.hh  Catch2checks.hh  Concepts.hh  ConfigJson.cc  ConfigJson.hh  Configuration.cc  Configuration.hh  EdgeSobel.cc  EdgeSobel.hh  Eigen.cc  Eigen.hh  FileIO.cc  FileIO.hh  Geometry.hh  Index.cc  Index.hh  IndexRange.cc  IndexRange.hh  IndexRange1.cc  IndexRange1.hh  IndexRange2dSet.cc  IndexRange2dSet.hh  IndexRangeSet.cc  IndexRangeSet.hh  (+31 more)
src/Ravl2/3D/: CMakeLists.txt  MeshShapes.cc  MeshShapes.hh  PinholeCamera.cc  PinholeCamera.hh  PinholeCamera0.cc  PinholeCamera0.hh  PinholeCamera1.cc  PinholeCamera1.hh  PinholeCamera2.cc  PinholeCamera2.hh  PinholeCamera3.cc  PinholeCamera3.hh  PinholeCameraArray.cc  PinholeCameraArray.hh  TexTriMesh.cc  TexTriMesh.hh  Tri.cc  Tri.hh  TriMesh.cc  TriMesh.hh  Vertex.cc  Vertex.hh
src/Ravl2/Dlib/: CMakeLists.txt  Display.cc  Display.hh  DisplayWindow.cc  DisplayWindow.hh  Image.cc  Image.hh  ImageIO.cc  ImageIO.hh  convert.cc  convert.hh
src/Ravl2/Geometry/: Affine.cc  Affine.hh  Affine2d.cc  Affine2d.hh  Affine2f.cc  Affine2f.hh  Affine3d.cc  Affine3d.hh  CMakeLists.txt  Circle.cc  Circle.hh  CircleFit.cc  CircleIter.cc  CircleIter.hh  Conic2.cc  Conic2.hh  Conic2d.cc  Conic2d.hh  Ellipse.cc  Ellipse.hh  Ellipse2d.cc  Ellipse2d.hh  FLinePP.cc  FLinePP.hh  FitAffine.cc  FitAffine.hh  FitCircle.hh  FitConic.cc  FitConic.hh  FitLine.cc  FitLine.hh  FitProjection.cc  FitProjection.hh  FitSimilarity.cc  FitSimilarity.hh  FitVectorOffset.cc  FitVectorOffset.hh  Geometry.cc  Geometry.hh  Isometry3.cc  (+68 more)
src/Ravl2/IO/: Cereal.cc  Cereal.hh  FileFormat.cc  FileFormat.hh  InputFormat.cc  InputFormat.hh  InputSequence.cc  InputSequence.hh  InputStreamContainer.cc  InputStreamContainer.hh  InputStreamMem.cc  InputStreamMem.hh  Load.cc  Load.hh  OutputFormat.cc  OutputFormat.hh  OutputSequence.cc  OutputSequence.hh  Save.cc  Save.hh  SequenceIO.cc  SequenceIO.hh  StreamInput.cc  StreamInput.hh  StreamOutput.cc  StreamOutput.hh  TypeConverter.cc  TypeConverter.hh
src/Ravl2/Image/: Array2Sqr2Iter.hh  Array2Sqr2Iter2.hh  Array2dPolygon2dIter.hh  BilinearInterpolation.cc  BilinearInterpolation.hh  BitmapFont.cc  BitmapFont.hh  CMakeLists.txt  Corner.cc  Corner.hh  CornerDetectorSusan.cc  CornerDetectorSusan.hh  DCT2d.cc  DCT2d.hh  DrawCircle.cc  DrawCircle.hh  DrawCross.hh  DrawEllipse.hh  DrawFrame.hh  DrawLine.hh  DrawMask.cc  DrawMask.hh  DrawPolygon.cc  DrawPolygon.hh  DrawSymbol.hh  DrawText.cc  DrawText.hh  EdgeSobel.cc  EdgeSobel.hh  Font.cc  Font.hh  ImageExtend.cc  ImageExtend.hh  ImagePyramid.cc  ImagePyramid.hh  ImagePyramidC.hh  MatchNormalisedCorrelation.cc  MatchNormalisedCorrelation.hh  MatchPatch.hh  Matching.cc  (+23 more)
src/Ravl2/Math/: CMakeLists.txt  FFT1d.cc  FFT1d.hh  FastFourierTransform.cc  FastFourierTransform.hh  FastFourierTransformMath.hh  LeastSquares.cc  LeastSquares.hh  LinearAlgebra.cc  LinearAlgebra.hh  MeanVariance.cc  MeanVariance.hh  PrimeFactors.cc  PrimeFactors.hh  PrimitiveBinaryPolynomial.cc  PrimitiveBinaryPolynomial.hh  SobolSequence.cc  SobolSequence.hh  Sums1d2.cc  Sums1d2.hh  SumsNd2.cc  SumsNd2.hh
src/Ravl2/OpenCV/: CMakeLists.txt  Display.cc  Display.hh  Geometry.cc  Geometry.hh  Image.cc  Image.hh  ImageIO.cc  ImageIO.hh  convert.cc  convert.hh
src/Ravl2/OpenGL/: CMakeLists.txt  Canvas3D.cc  Canvas3D.hh  DCube3D.cc  DCube3D.hh  DLight3D.cc  DLight3D.hh  DObject.cc  DObject.hh  DObject3D.cc  DObject3D.hh  DPinholeCamera03D.cc  DPinholeCamera03D.hh  DPointSet3d.cc  DPointSet3d.hh  DPolyLine.cc  DPolyLine.hh  DSurfacePointVertexArray.cc  DSurfacePointVertexArray.hh  DSurfacePointVertexByteRGBArray.cc  DSurfacePointVertexByteRGBArray.hh  DTexTriMesh.cc  DTexTriMesh.hh  DTexTriMesh3D.cc  DTexTriMesh3D.hh  DTransform.cc  DTransform.hh  DTriMesh.cc  DTriMesh.hh  DTriMesh3D.cc  DTriMesh3D.hh  DViewPoint3D.cc  DViewPoint3D.hh  GLContext.cc  GLContext.hh  GLShader.cc  GLShader.hh  GLWindow.cc  GLWindow.hh  ImGui.cc  (+9 more)
src/Ravl2/Optimise/: BayesianOptimise.cc  BayesianOptimise.hh  BracketMinimum.cc  BracketMinimum.hh  CMakeLists.txt  Cost.cc  Cost.hh  CostDomain.hh  CostFunction.cc  CostFunction.hh  CostFunction1d.cc  CostFunction1d.hh  CostInvert.cc  CostInvert.hh  GaussianProcess.cc  GaussianProcess.hh  Optimise.cc  Optimise.hh  OptimiseBrent.cc  OptimiseBrent.hh  OptimiseConjugateGradient.cc  OptimiseConjugateGradient.hh  OptimiseDescent.cc  OptimiseDescent.hh  OptimiseGrid.cc  OptimiseGrid.hh  OptimiseLevenbergMarquardt.cc  OptimiseLevenbergMarquardt.hh  OptimiseParticleSwarm.cc  OptimiseParticleSwarm.hh  OptimisePowell.cc  OptimisePowell.hh  OptimiseRandomUniform.cc  OptimiseRandomUniform.hh  OptimiseSobol.cc  OptimiseSobol.hh  Parameters.cc  Parameters.hh  ParticleSwarmOptimise.cc  ParticleSwarmOptimise.hh  (+4 more)
src/Ravl2/Pixel/: BGRAValue.hh  BGRValue.hh  CMakeLists.txt  Colour.cc  Colour.hh  IAValue.hh  Pixel.cc  Pixel.hh  PixelPlane.cc  PixelPlane.hh  PixelRGB.cc  PixelRGB.hh  PixelRGBA.cc  PixelRGBA.hh  RGBAValue.hh  RGBValue.cc  RGBValue.hh  RGBcYUV.cc  RGBcYUV.hh  VYUValue.hh  YUV422Value.hh  YUVAValue.hh  YUVValue.hh
src/Ravl2/Qt/: CMakeLists.txt  Geometry.cc  Geometry.hh  Image.cc  Image.hh  Index.cc  Index.hh
src/Ravl2/Type/: CMakeLists.txt  Factory.hh  Namespace.cc  Namespace.hh  Type.cc  (+4 more)
src/examples/: CMakeLists.txt  benchmarkAccess.cc  exAssert.cc
src/test/: test_core.cc  test_image.cc
src/tests/: CMakeLists.txt  test_core.cc
(+133 files in other folders)
